# OpenGL_CMake_Skeleton

./: CMakeLists.txt
shader/: axis.vert  camera_debug.vert  cube.vert  grid.vert  line_debug.frag  line_debug.vert  quad.frag  quad.vert  quadtree.frag  quadtree.vert  shader.vert
src/: Application3D.cpp  Application3D.hpp
src/app/: Cube.cpp  Cube.h  DebugLine.cpp  DebugLine.h  Grid.cpp  Grid.h  Heightmap.cpp  Heightmap.h  Quad.cpp  Quad.h  QuadTree.cpp  QuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h  QuadTreePatchMesh.cpp  QuadTreePatchMesh.h
src/debug/: Axis.cpp  Axis.h  CameraDebugDrawer.cpp  CameraDebugDrawer.h
src/graphic/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.h  Transform.cpp  Transform.h
src/system/: Application.cpp  Application.hpp  Input.cpp  Input.h  InputEvent.h
src/system/InputRecognizers/: InputRecognizer.cpp  InputRecognizer.h  InputRecognizerPan.cpp  InputRecognizerPan.h  InputRecognizerRotation.cpp  InputRecognizerRotation.h
src/utils/: glError.cpp  glError.hpp
